Implementação strategy pattern para taxCredit
